# proj_example

./: CMakeLists.txt  README.md  example.cpp  readme.md
include/: coordinate_trans.h
src/: coordinate_trans.cpp
stictch_image/: stitch_image.cpp
tool/: compute_distort.py  compute_distort_circle.py  distort_obs.txt  distort_obs_new copy.txt  distort_obs_new.txt  grid-1.txt  grid-38X38.txt  grid.txt
